# my_isaac_project

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  251201_drone_first.usd  251214_chapter2_bodyandwheel.usd  260114_camera.usd  Makefile  README.md  gg.usd  mypy.ini  pyproject.toml  requirements.txt  ur10e_test.urdf
assets/environments/: industrial_factory.usda  myfactory_ing.usda  sample.usda
assets/environments/textures/: color_121212.hdr
assets/textures/floor/: Concrete022_2K-PNG.blend  Concrete022_2K-PNG.mtlx  Concrete022_2K-PNG.tres  Concrete022_2K-PNG.usdc
assets/textures/metal/: Metal028_2K-PNG.blend  Metal028_2K-PNG.mtlx  Metal028_2K-PNG.tres  Metal028_2K-PNG.usdc
configs/: drone.yaml  environment.yaml  quadruped.yaml  simulation.yaml
docs/: environment_design.md  myfactory_design.md
scripts/: __init__.py
scripts/control/: __init__.py  drone_controller.py  mavlink_drone_control.py  ros2_offboard_control.py  run_ros2_offboard.sh  start_offboard.sh
scripts/setup/: __init__.py  install_dependencies.sh  verify_environment.py
scripts/slam/: __init__.py  run_ros2_slam.sh  run_slam.sh  run_slam_simulation.py
scripts/utils/: __init__.py  config_loader.py  logger.py
tests/: __init__.py  test_config_loader.py
ur10e_test/: ur10e_test.usd
ur10e_test/configuration/: ur10e_test_physics.usd  ur10e_test_robot.usd  ur10e_test_sensor.usd
